# SO

./: Cargo.toml  register.ps1
appx/: AppxManifest.xml
src/: main.rs  main_view_model.rs  main_window.rs
